Fixed issue with menu positioning in RTL mode so it doesn't include the scrollbar width.

--- a/js/tinymce/skins/lightgray/Menu.less
+++ b/js/tinymce/skins/lightgray/Menu.less
@@ -1,6 +1,8 @@
 // Menu
 
 .mce-menu {
+	position: absolute;
+	left: 0; top: 0;
 	.reset-gradient();
 	z-index: 1000;
 	padding: 5px 0 5px 0;
